--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"axios": "^1.6.0",
 		"date-fns": "^3.0.0",
+		"eslint-plugin-svelte": "^3.9.0",
 		"sqlite3": "^5.1.7"
 	},
 	"type": "module"
