--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"eslint": "^8.0.0",
 		"eslint-config-prettier": "^9.0.0",
 		"prettier": "^3.0.0",
+		"sass-embedded": "^1.89.0",
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
@@ -22,7 +23,8 @@
 		"axios": "^1.6.0",
 		"date-fns": "^3.0.0",
 		"eslint-plugin-svelte": "^3.9.0",
-		"sqlite3": "^5.1.7"
+		"sqlite3": "^5.1.7",
+		"svelte-loading-spinners": "^0.3.6"
 	},
 	"type": "module"
 }
